--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <p id="loading">Loading</p>
       <div id="results"></div>
     </section>
+    <script src="menu.js"></script>
+    <script src="torrent.js"></script>
+    <script src="player.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
