Refactor Popcorn API code

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </section>
     <script src="menu.js"></script>
     <script src="torrent.js"></script>
+    <script src="popcorn.js"></script>
     <script src="player.js"></script>
     <script src="index.js"></script>
   </body>
