Refactor subtitles code

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <script src="torrent.js"></script>
     <script src="popcorn.js"></script>
     <script src="player.js"></script>
+    <script src="subtitles.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
