Refactor main app logic

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <script src="popcorn.js"></script>
     <script src="player.js"></script>
     <script src="subtitles.js"></script>
+    <script src="arnold.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
