Refactor gui code

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <script src="player.js"></script>
     <script src="subtitles.js"></script>
     <script src="arnold.js"></script>
+    <script src="arnoldgui.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
