--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="popcorn.js"></script>
     <script src="player.js"></script>
     <script src="subtitles.js"></script>
-    <script src="arnold.js"></script>
+    <script src="app.js"></script>
     <script src="arnoldgui.js"></script>
     <script src="index.js"></script>
   </body>
