rename class ArnoldGui to Gui

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <script src="player.js"></script>
     <script src="subtitles.js"></script>
     <script src="app.js"></script>
-    <script src="arnoldgui.js"></script>
+    <script src="gui.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
