--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       <p id="loading">Loading</p>
       <div id="results"></div>
     </section>
+    <script src="mediainfo.js"></script>
     <script src="torrent.js"></script>
     <script src="popcorn.js"></script>
     <script src="player.js"></script>
