put files in subdirectories

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 
     </div>
 
-    <script src="mediainfo.js"></script>
-    <script src="torrent.js"></script>
-    <script src="popcorn.js"></script>
-    <script src="player.js"></script>
-    <script src="subtitles.js"></script>
-    <script src="app.js"></script>
-    <script src="gui.js"></script>
+    <script src="app_modules/mediainfo.js"></script>
+    <script src="app_modules/torrent.js"></script>
+    <script src="app_modules/popcorn.js"></script>
+    <script src="app_modules/player.js"></script>
+    <script src="app_modules/subtitles.js"></script>
+    <script src="app_modules/app.js"></script>
+    <script src="app_modules/gui.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
