--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
         <div id="dropIndicator">
           <p>Drop to play</p>
-          <p class="dropHint" id="dropHint1">this is a test</p>
-          <p class="dropHint" id="dropHint2">this is another test</p>
+          <p class="dropHint" id="dropHint1"></p>
+          <p class="dropHint" id="dropHint2"></p>
         </div>
       </div>
 
@@ -123,6 +123,7 @@
 
     </div>
 
+    <script src="app_modules/menubuilder.js"></script>
     <script src="app_modules/mediainfo.js"></script>
     <script src="app_modules/torrent.js"></script>
     <script src="app_modules/popcorn.js"></script>
@@ -130,6 +131,8 @@
     <script src="app_modules/subtitles.js"></script>
     <script src="app_modules/app.js"></script>
     <script src="app_modules/gui.js"></script>
+    <script src="app_modules/screen_home.js"></script>
+    <script src="app_modules/screen_playing.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
