refactor torrent and subtitles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="player">
       <canvas id="canvas"></canvas>
-      <div id="subtitles"></div>
+      <div id="subtitles_container"></div>
     </div>
 
     <!-- log widget -->
@@ -96,7 +96,7 @@
             <input id="inputFileSubtitles" type="file">
           </p>
           <p>
-            <button id="buttonLoadSubtitles">Load from OpenSubtitles</button>
+            <button id="btnLoadOpenSubtitles">Load from OpenSubtitles</button>
             <select id="selectOpenSubtitles"></select>
           </p>
 
