--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <p>
             <button id="btnLoadOpenSubtitles">Load from OpenSubtitles</button>
             <select id="selectOpenSubtitles"></select>
+            <span id="openSubtitlesLoading">Loading</span>
           </p>
 
         </section>
