nice UI for audio tracks

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     <div id="dAudio">
 
       <table>
+        <thead>
+          <tr><th>Audio</th></tr>
+        </thead>
+        <thead>
+        </thead>
         <tbody id="dAudioTable">
         </tbody>
       </table>
