home: add hint for subtitles feature

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     <div id="dHome">
       <div id="dHomeDropZone">
         <div id="dHomeDropHint">
-          <p id="dHomeDropHintAuxiliary1">Arnold can read almost any video file.</p>
+          <p id="dHomeDropHintAuxiliary1">Arnold can read almost any video file</p>
           <p id="dHomeDropHintMain">Drop a file to play</p>
           <p id="dHomeDropHintAuxiliary2">or click here to choose one</p>
+          <p id="dHomeDropHintAuxiliary3">It is good at finding subtitles too<br>(try pressing L during a movie)</p>
         </div>
       </div>
       <div id="dHomeLanguage">
