subtitles: nice UI for loading file and searching OpenSubtitles.org

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <table>
         <thead>
-          <tr><th>Language:  - Change</th></tr>
+          <tr id="dSubtitlesLang"><th>Language:  - Change</th></tr>
         </thead>
         <tbody id="dSubtitlesTable">
         </tbody>
