home: update hint for subtitles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <p id="dHomeDropHintAuxiliary1">Arnold can read almost any video file</p>
           <p id="dHomeDropHintMain">Drop a file to play</p>
           <p id="dHomeDropHintAuxiliary2">or click here to choose one</p>
-          <p id="dHomeDropHintAuxiliary3">It is good at finding subtitles too<br>(try pressing L during a movie)</p>
+          <p id="dHomeDropHintAuxiliary3">Arnold is good at finding subtitles too<br>(try pressing Cmd+L during a movie)</p>
         </div>
       </div>
     </div>
