audio: review appearance

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         </thead>
         <tbody id="dAudioTable">
         </tbody>
+        <tfoot>
+          <tr><th>&nbsp;</th></tr>
+        </tfoot>
       </table>
 
     </div>
