subtitles: review appearance

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
 
       <table>
         <thead>
-          <tr id="dSubtitlesLang"><th>Language:  - Change</th></tr>
+          <tr><th>Subtitles</th></tr>
         </thead>
         <tbody id="dSubtitlesTable">
         </tbody>
         <tfoot>
-          <tr id="dSubtitlesSearch"><th>Search subtitles on OpenSubtitles.org</th></tr>
-          <tr id="dSubtitlesLoad"><th>Load a file</th></tr>
-          <tr id="dSubtitlesDisable"><th>Disable subtitles</th></tr>
+          <tr id="dSubtitlesSearch"><td>Search on OpenSubtitles.org</td></tr>
+          <tr id="dSubtitlesLoad"><td>Load from file</td></tr>
+          <tr id="dSubtitlesDisable"><td>Disable subtitles</td></tr>
+          <tr><th>&nbsp;</th></tr>
         </tfoot>
       </table>
 
