audio: refactor into widget

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div id="dAudio">
+    <div id="dAudioWidget">
 
       <table>
         <thead>
@@ -26,7 +26,7 @@
         </thead>
         <thead>
         </thead>
-        <tbody id="dAudioTable">
+        <tbody class="audioTable">
         </tbody>
         <tfoot>
           <tr><th>&nbsp;</th></tr>
@@ -35,7 +35,7 @@
 
     </div>
 
-    <div id="dSubtitles">
+    <div id="dSubtitlesWidget">
 
       <table>
         <thead>
