--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
         <thead>
           <tr><th>Subtitles</th></tr>
         </thead>
-        <tbody id="dSubtitlesTable">
+        <tbody class="subtitlesTable">
         </tbody>
         <tfoot>
-          <tr id="dSubtitlesSearch"><td>Search on OpenSubtitles.org</td></tr>
-          <tr id="dSubtitlesLoad"><td>Load from file</td></tr>
-          <tr id="dSubtitlesDisable"><td>Disable subtitles</td></tr>
+          <tr class="subtitlesSearch"><td>
+            <span class="contentIdle">Search on OpenSubtitles.org</span>
+            <span class="contentLoading">Loading subtitles...</span>
+          </td></tr>
+          <tr class="subtitlesLoad"><td>Load from file</td></tr>
+          <tr class="subtitlesDisable"><td>Disable subtitles</td></tr>
           <tr><th>&nbsp;</th></tr>
         </tfoot>
       </table>
