--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 
     </div>
 
+    <div id="dSubtitlesHint">
+      <p class="contentLoading">Loading subtitles...</p>
+    </div>
+
     <div class="player" id="dPlayer">
       <canvas class="playerCanvas"></canvas>
       <div class="playerSubtitlesBox"></div>
