--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <div class="playerSubtitlesBox"></div>
     </div>
 
+    <div id="dError">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
