--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     </div>
 
     <div id="dError">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+      <p id="dErrorText">
+      </p>
+      <p id="dErrorHint">Click to close</p>
     </div>
 
     <script src="index.js"></script>
