add 'paused' indicator

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
 
     <div class="player" id="dPlayer">
+      <div id="dPlayerHintPaused">Paused</div>
       <canvas class="playerCanvas"></canvas>
       <div class="playerSubtitlesBox"></div>
     </div>
