add time indicator

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 
     <div id="dSubtitlesHint">
       <p class="contentLoading">Loading subtitles...</p>
+
     </div>
 
     <div class="player" id="dPlayer">
       <div id="dPlayerHintPaused">Paused</div>
+      <div id="dPlayerHintTime"></div>
       <canvas class="playerCanvas"></canvas>
       <div class="playerSubtitlesBox"></div>
     </div>
