subtitles: add on screen display when downloading subtitles

--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
 
     </div>
 
-    <div id="dSubtitlesHint">
-      <p class="contentLoading">Loading subtitles...</p>
-
-    </div>
+    <div class="dSubtitlesHint" id="dSubtitlesHintSearching">Searching subtitles...</div>
+    <div class="dSubtitlesHint" id="dSubtitlesHintDownloading">Downloading subtitles...</div>
 
     <div class="player" id="dPlayer">
       <div id="dPlayerHintPaused">Paused</div>
